# revdeprun

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  lib.rs  main.rs  progress.rs  r_install.rs  r_version.rs  revdep.rs  sysreqs.rs  util.rs  workspace.rs
