[package]
name = "revdeprun"
version = "1.0.0"
edition = "2024"
description = "Easy reverse dependency checks for R with cloud-ready environment setup"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nanxstats/revdeprun"
documentation = "https://docs.rs/revdeprun"
keywords = ["R-packages", "integration-testing", "reverse-dependency"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"
authors = ["Nan Xiao <me@nanx.me>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
indicatif = "0.18.2"
num_cpus = "1.17.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
xshell = "0.2.7"
